--- a/apps/web/railway.toml
+++ b/apps/web/railway.toml
@@ -1,9 +1,9 @@
 [build]
 builder = "nixpacks"
-buildCommand = "npm install && npx prisma generate && npx prisma db push && npm run build"
+buildCommand = "cd apps/web && npm install && npx prisma generate && npx prisma db push && npm run build"
 
 [deploy]
-startCommand = "npm run start"
+startCommand = "cd apps/web && npm run start"
 healthcheckPath = "/"
 healthcheckTimeout = 300
 restartPolicyType = "on_failure"
