--- a/apps/api/railway.toml
+++ b/apps/api/railway.toml
@@ -1,9 +1,9 @@
 [build]
 builder = "nixpacks"
-buildCommand = "npm install && npm run build"
+buildCommand = "cd apps/api && npm install && npm run build"
 
 [deploy]
-startCommand = "npm run start"
+startCommand = "cd apps/api && npm run start"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 restartPolicyType = "on_failure"
