--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,9 +22,11 @@
     "@stripe/stripe-js": "^8.5.3",
     "@supabase/supabase-js": "^2.89.0",
     "bcryptjs": "^3.0.3",
+    "bip39": "^3.1.0",
     "bs58": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ed25519-hd-key": "^1.3.0",
     "fix-webm-duration": "^1.0.6",
     "html2canvas": "^1.4.1",
     "lightweight-charts": "^5.0.9",
